--- a/src/views/MenuCampeggio.form
+++ b/src/views/MenuCampeggio.form
@@ -235,7 +235,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <editable value="false"/>
+        </properties>
       </component>
       <component id="7d8fd" class="javax.swing.JTextField" binding="tfExtra">
         <constraints>
