--- a/src/main/java/views/MenuCampeggio.form
+++ b/src/main/java/views/MenuCampeggio.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.MenuCampeggio">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="16" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanelCampeggio" layout-manager="GridLayoutManager" row-count="16" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="661" height="479"/>
@@ -107,7 +107,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="N° Bambini:"/>
+          <text value="N° Bambini (3-10):"/>
         </properties>
       </component>
       <component id="b8b32" class="javax.swing.JTextField" binding="tfNumBambini">
@@ -164,12 +164,12 @@
           <text value="Totale campeggio:"/>
         </properties>
       </component>
-      <component id="7ce9d" class="javax.swing.JLabel" binding="labelTassaSoggiono">
+      <component id="7ce9d" class="javax.swing.JLabel" binding="labelTassaSoggiorno">
         <constraints>
           <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Tassa di soggiorno:"/>
+          <text value="Tassa di soggiorno (&gt;12):"/>
         </properties>
       </component>
       <component id="bffc2" class="javax.swing.JSeparator">
