--- a/src/main/java/views/MenuCampeggio.form
+++ b/src/main/java/views/MenuCampeggio.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="661" height="479"/>
     </constraints>
-    <properties/>
+    <properties>
+      <enabled value="true"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="76279" class="com.github.lgooddatepicker.components.DatePicker" binding="datePickerArrivo">
