--- a/src/main/java/views/MenuPrezzario.form
+++ b/src/main/java/views/MenuPrezzario.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <enabled value="true"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="d015f" class="javax.swing.JTable" binding="tblPrezzi">
