--- a/src/main/java/views/MenuCampeggio.form
+++ b/src/main/java/views/MenuCampeggio.form
@@ -238,12 +238,19 @@
           <component id="a3ae6" class="javax.swing.JButton" binding="btnCancella">
             <constraints/>
             <properties>
+              <background color="-2731456"/>
+              <enabled value="true"/>
+              <foreground color="-1"/>
+              <hideActionText value="false"/>
               <text value="Cancella"/>
             </properties>
           </component>
           <component id="f7872" class="javax.swing.JButton" binding="btnCalcola">
             <constraints/>
             <properties>
+              <background color="-7087754"/>
+              <foreground color="-1"/>
+              <hideActionText value="false"/>
               <text value="Calcola"/>
             </properties>
           </component>
