--- a/src/main/java/views/MenuCampeggio.form
+++ b/src/main/java/views/MenuCampeggio.form
@@ -171,6 +171,7 @@
               <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="14" style="1"/>
               <text value="Totale campeggio:"/>
             </properties>
           </component>
@@ -193,6 +194,7 @@
               <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="14" style="1"/>
               <text value="Totale con tassa:"/>
             </properties>
           </component>
@@ -218,12 +220,50 @@
             </constraints>
             <properties/>
           </component>
-          <component id="cf21e" class="javax.swing.JLabel" binding="labelTotale">
+          <component id="2cddf" class="javax.swing.JLabel" binding="labelCalcoloTassaSoggiorno">
             <constraints>
-              <grid row="14" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="390ac" class="javax.swing.JLabel" binding="labelCalcoloTotaleCampeggio">
+            <constraints>
+              <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="aa150" class="javax.swing.JLabel" binding="labelCalcoloTotaleTassa">
+            <constraints>
+              <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="21de5" class="javax.swing.JTextField" binding="tfTotale">
+            <constraints>
+              <grid row="14" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <autoscrolls value="false"/>
+              <background color="-1"/>
+              <disabledTextColor color="-16777216"/>
+              <doubleBuffered value="true"/>
+              <editable value="false"/>
+              <enabled value="false"/>
+              <focusable value="false"/>
+              <font size="14" style="1"/>
+              <foreground color="-16777216"/>
+              <requestFocusEnabled value="false"/>
+              <selectedTextColor color="-16777216"/>
               <text value="TOTALE:"/>
+              <toolTipText value=""/>
             </properties>
           </component>
         </children>
