--- a/src/main/java/views/MenuCampeggio.form
+++ b/src/main/java/views/MenuCampeggio.form
@@ -26,7 +26,7 @@
               <text value="Arrivo:"/>
             </properties>
           </component>
-          <component id="76279" class="com.github.lgooddatepicker.components.DatePicker" binding="datePickerArrivo">
+          <component id="76279" class="com.github.lgooddatepicker.components.DatePicker" binding="datePickerArrivo" custom-create="true">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -40,7 +40,7 @@
               <text value="Partenza:"/>
             </properties>
           </component>
-          <component id="9f7f8" class="com.github.lgooddatepicker.components.DatePicker" binding="datePickerPartenza">
+          <component id="9f7f8" class="com.github.lgooddatepicker.components.DatePicker" binding="datePickerPartenza" custom-create="true">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
