--- a/src/main/java/views/MenuPrezzario.form
+++ b/src/main/java/views/MenuPrezzario.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.MenuPrezzario">
-  <grid id="27dc6" binding="mainPanelPrezzario" layout-manager="BorderLayout" hgap="0" vgap="0">
+  <grid id="27dc6" binding="mainPanelPrezzario" custom-create="true" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -16,24 +16,11 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="97b1f" binding="pnButtons" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+      <grid id="97b1f" binding="pnButtons" custom-create="true" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
-        <children>
-          <component id="1cbb4" class="javax.swing.JButton" binding="buttonAggiungi">
-            <constraints/>
-            <properties>
-              <text value="Aggiungi"/>
-            </properties>
-          </component>
-          <component id="2abf5" class="javax.swing.JButton" binding="buttonModifica">
-            <constraints/>
-            <properties>
-              <text value="Modifica"/>
-            </properties>
-          </component>
-        </children>
+        <children/>
       </grid>
     </children>
   </grid>
