--- a/src/main/java/views/MenuMargherita.form
+++ b/src/main/java/views/MenuMargherita.form
@@ -10,12 +10,12 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="81017" class="javax.swing.JButton" binding="provaButton" default-binding="true">
+      <component id="a984" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="prova"/>
+          <text value="WORK IN PROGRESS!"/>
         </properties>
       </component>
     </children>
