--- a/src/main/java/views/MenuCampeggio.form
+++ b/src/main/java/views/MenuCampeggio.form
@@ -225,6 +225,7 @@
               <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <horizontalTextPosition value="0"/>
               <text value=""/>
             </properties>
           </component>
@@ -233,6 +234,7 @@
               <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <horizontalTextPosition value="0"/>
               <text value=""/>
             </properties>
           </component>
@@ -241,6 +243,7 @@
               <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <horizontalTextPosition value="0"/>
               <text value=""/>
             </properties>
           </component>
